update: fixed spacing and packages

--- a/Frontend/social_Media_app/src/App.css
+++ b/Frontend/social_Media_app/src/App.css
@@ -13,11 +13,6 @@ body {
   margin-left: 0 !important;
 }
 
-.container-fluid {
-  /* padding-right: 0 !important;
-  padding-left: 0 !important; */
-}
-
 img {
   max-width: 100%;
   height: auto;
